= 1.3.9 = * Fix: Fixed an issue where photos wouldn't appear in the Instagram feed if it was initially being hidden inside of a tab or some other element * Fix: Fixed an issue where the new image cropping fuction was failing to run on some sites and causing the images to appear as blank
git-svn-id: https://plugins.svn.wordpress.org/instagram-feed/trunk@1271498 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/sb-instagram.css
+++ b/css/sb-instagram.css
@@ -84,7 +84,6 @@
 #sb_instagram .sbi_photo{
   display: block;
   text-decoration: none;
-  height: 200px;
 }
 #sb_instagram a,
 #sb_instagram a:hover,
